; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_anal.c_setFunctionName.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_anal.c_setFunctionName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { %struct.TYPE_13__* }
%struct.TYPE_13__ = type { i32, %struct.TYPE_10__ }
%struct.TYPE_10__ = type { i32 (%struct.TYPE_13__*, i32, %struct.TYPE_12__*, i8*)* }
%struct.TYPE_12__ = type { i8* }

@R_ANAL_FCN_TYPE_ANY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_11__*, i32, i8*, i32)* @setFunctionName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @setFunctionName(%struct.TYPE_11__* %0, i32 %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_11__*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_11__* %0, %struct.TYPE_11__** %6, align 8
  store i32 %1, i32* %7, align 4
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %12 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %13 = icmp ne %struct.TYPE_11__* %12, null
  br i1 %13, label %14, label %17

14:                                               ; preds = %4
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br label %17

17:                                               ; preds = %14, %4
  %18 = phi i1 [ false, %4 ], [ %16, %14 ]
  %19 = zext i1 %18 to i32
  %20 = call i32 @r_return_val_if_fail(i32 %19, i32 0)
  %21 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load i8*, i8** %8, align 8
  %24 = load i32, i32* %9, align 4
  %25 = call i8* @getFunctionName(%struct.TYPE_11__* %21, i32 %22, i8* %23, i32 %24)
  store i8* %25, i8** %10, align 8
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_13__*, %struct.TYPE_13__** %27, align 8
  %29 = load i32, i32* %7, align 4
  %30 = load i32, i32* @R_ANAL_FCN_TYPE_ANY, align 4
  %31 = call %struct.TYPE_12__* @r_anal_get_fcn_in(%struct.TYPE_13__* %28, i32 %29, i32 %30)
  store %struct.TYPE_12__* %31, %struct.TYPE_12__** %11, align 8
  %32 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %33 = icmp ne %struct.TYPE_12__* %32, null
  br i1 %33, label %34, label %68

34:                                               ; preds = %17
  %35 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %36 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %35, i32 0, i32 0
  %37 = load i8*, i8** %36, align 8
  %38 = call i32 @free(i8* %37)
  %39 = load i8*, i8** %10, align 8
  %40 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %41 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %40, i32 0, i32 0
  store i8* %39, i8** %41, align 8
  %42 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %43 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %42, i32 0, i32 0
  %44 = load %struct.TYPE_13__*, %struct.TYPE_13__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %44, i32 0, i32 1
  %46 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %45, i32 0, i32 0
  %47 = load i32 (%struct.TYPE_13__*, i32, %struct.TYPE_12__*, i8*)*, i32 (%struct.TYPE_13__*, i32, %struct.TYPE_12__*, i8*)** %46, align 8
  %48 = icmp ne i32 (%struct.TYPE_13__*, i32, %struct.TYPE_12__*, i8*)* %47, null
  br i1 %48, label %49, label %67

49:                                               ; preds = %34
  %50 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %51 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %50, i32 0, i32 0
  %52 = load %struct.TYPE_13__*, %struct.TYPE_13__** %51, align 8
  %53 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %52, i32 0, i32 1
  %54 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %53, i32 0, i32 0
  %55 = load i32 (%struct.TYPE_13__*, i32, %struct.TYPE_12__*, i8*)*, i32 (%struct.TYPE_13__*, i32, %struct.TYPE_12__*, i8*)** %54, align 8
  %56 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %57 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %56, i32 0, i32 0
  %58 = load %struct.TYPE_13__*, %struct.TYPE_13__** %57, align 8
  %59 = load %struct.TYPE_11__*, %struct.TYPE_11__** %6, align 8
  %60 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %59, i32 0, i32 0
  %61 = load %struct.TYPE_13__*, %struct.TYPE_13__** %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 8
  %64 = load %struct.TYPE_12__*, %struct.TYPE_12__** %11, align 8
  %65 = load i8*, i8** %10, align 8
  %66 = call i32 %55(%struct.TYPE_13__* %58, i32 %63, %struct.TYPE_12__* %64, i8* %65)
  br label %67

67:                                               ; preds = %49, %34
  store i32 1, i32* %5, align 4
  br label %71

68:                                               ; preds = %17
  %69 = load i8*, i8** %10, align 8
  %70 = call i32 @free(i8* %69)
  store i32 0, i32* %5, align 4
  br label %71

71:                                               ; preds = %68, %67
  %72 = load i32, i32* %5, align 4
  ret i32 %72
}

declare dso_local i32 @r_return_val_if_fail(i32, i32) #1

declare dso_local i8* @getFunctionName(%struct.TYPE_11__*, i32, i8*, i32) #1

declare dso_local %struct.TYPE_12__* @r_anal_get_fcn_in(%struct.TYPE_13__*, i32, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
